Actions
Bug #13233
closed[DOC] Fix rdoc for Rational
Bug #13233:
[DOC] Fix rdoc for Rational
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.4.0p0 (2016-12-24 revision 57164) [i686-linux]
Backport:
Description
rational.c: fix rdoc
* rational.c: [DOC] fix wrong indentations and comment out some lines
in code examples to make them valid Ruby code and syntax highlighted
on the rendered page.
Files
Updated by stomar (Marcus Stollsteimer) about 9 years ago
- Subject changed from rational.c: fix rdoc to [DOC] Fix rdoc for Rational
Updated by nobu (Nobuyoshi Nakada) about 9 years ago
- Status changed from Open to Feedback
No patch?
Updated by stomar (Marcus Stollsteimer) about 9 years ago
- File rdoc_rational.patch rdoc_rational.patch added
Sorry, forgot the attachment.
Updated by Anonymous about 9 years ago
- Status changed from Feedback to Closed
Applied in changeset r57686.
rational.c: fix rdoc
- rational.c: [DOC] fix wrong indentations and comment out some lines
in code examples to make them valid Ruby code and syntax highlighted
on the rendered page.
[ci skip] [ruby-core:79607] [Bug #13233]
Author: Marcus Stollsteimer sto.mar@web.de
Updated by usa (Usaku NAKAMURA) about 9 years ago
- Backport changed from 2.2: UNKNOWN, 2.3: UNKNOWN, 2.4: UNKNOWN to 2.2: REQUIRED, 2.3: REQUIRED, 2.4: REQUIRED
Updated by usa (Usaku NAKAMURA) about 9 years ago
- Backport changed from 2.2: REQUIRED, 2.3: REQUIRED, 2.4: REQUIRED to 2.2: DONE, 2.3: REQUIRED, 2.4: REQUIRED
ruby_2_2 r58121 merged revision(s) 57686.
Updated by nagachika (Tomoyuki Chikanaga) over 8 years ago
- Backport changed from 2.2: DONE, 2.3: REQUIRED, 2.4: REQUIRED to 2.2: DONE, 2.3: REQUIRED, 2.4: DONE
ruby_2_4 r61363 merged revision(s) 57686.
Actions